--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
   <body>
-    
+    <iframe src="/nx-kronos/apps/demopage/index.html" title="Main app"></iframe>
   </body>
 </html>
