--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
   <body>
-    <iframe src="/nx-kronos/apps/demopage/index.html" title="Main app"></iframe>
+    <iframe src="/cs-kronos/nx-kronos/apps/demopage/index.html" title="Main app" frameborder="0" scrolling="yes" seamless="seamless" style="display:block; width:100%; height:100vh;"></iframe>
   </body>
 </html>
